--- a/css/styles.css
+++ b/css/styles.css
@@ -86,8 +86,18 @@ img {
 
 /* Header */
 
-.header {
+
+/* Agrega imagenes webp */
+
+.webp .header {
+    background-image: url(../img/banner.webp);
+}
+
+.no-webp .header {
     background-image: url(../img/banner.jpg);
+}
+
+.header {
     height: 60rem;
     background-size: cover;
     background-repeat: no-repeat;
@@ -186,6 +196,10 @@ img {
     }
 }
 
+.boton:hover {
+    cursor: pointer;
+}
+
 .boton--primario {
     background-color: var(--negro);
 }
@@ -274,6 +288,46 @@ img {
 .curso__label,
 .curso__info {
     font-size: 2rem;
+}
+
+
+/* Contacto */
+
+.contacto-bg {
+    background-image: url(../img/contacto.jpg);
+    height: 40rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.formulario {
+    background-color: var(--blanco);
+    /* Top negativo para ir arriba */
+    margin: -5rem auto 0 auto;
+    width: 95%;
+    padding: 5rem;
+}
+
+.campo {
+    display: flex;
+    margin-bottom: 2rem;
+}
+
+.campo__label {
+    flex: 0 0 9rem;
+    text-align: right;
+    padding-right: 2rem;
+}
+
+.campo__field {
+    /* Extiende el fiel a lo que queda */
+    flex: 1;
+    border: .1rem solid var(--gris);
+}
+
+.campo__field--textarea {
+    height: 20rem;
+    resize: none;
 }
 
 
